# Photo-Point

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  STATUS.md  TEST_COVERAGE_REPORT.md  docker-compose.dev.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_mypy.sh  simple_server.py  test_architecture.py  test_comprehensive.py
.github/workflows/: ci-cd.yml
app/application/: __init__.py  exceptions.py
app/application/dto/: __init__.py
app/application/use_cases/: __init__.py  celery_notification_sending.py  notification_sending.py  user_management.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  delivery.py  notification.py  user.py
app/domain/repositories/: __init__.py  delivery_repository.py  notification_repository.py  user_repository.py
app/domain/services/: __init__.py
app/domain/value_objects/: __init__.py  delivery.py  notification.py  user.py
app/infrastructure/: __init__.py  celery_config.py  config.py  logging.py  simple_tasks.py  tasks.py.bak  tortoise_init.py
app/infrastructure/adapters/: __init__.py  email_adapter.py  sms_adapter.py  telegram_adapter.py
app/infrastructure/config/: tortoise_config.py
app/infrastructure/repositories/: __init__.py  memory_repositories.py  models.py  sqlalchemy_repositories.py  tortoise_delivery_repository.py  tortoise_models.py  tortoise_notification_repository.py  tortoise_user_repository.py
app/presentation/: __init__.py  app.py  app_tortoise.py  cli.py  dependencies.py  dependencies_tortoise.py
app/presentation/admin/: routes.py
app/presentation/admin/templates/: admin.html
app/presentation/api/: __init__.py  main.py
app/presentation/api/routes/: __init__.py  async_notifications.py  celery_test.py  deliveries.py  health.py  notifications.py  users.py
docs/: migrations.md
examples/: bulk_example.py  reliability_test.py  simple_example.py
scripts/: aerich_init.py  init-db.sql  migrations.sh  run_tests.sh
src/: __init__.py  base.py  config.py  exceptions.py  models.py  service.py
src/providers/: email.py  sms.py  telegram.py
tests/: conftest.py  test_adapters_comprehensive.py  test_api.py  test_api_routes_comprehensive.py  test_basic.py  test_comprehensive.py  test_deliveries_routes_direct.py  test_entities_comprehensive.py  test_extra.py  test_final.py  test_health_api_simple.py  test_infrastructure.py  test_infrastructure_adapters.py  test_notifications_routes_direct.py  test_repositories_comprehensive.py  test_repositories_fixed.py  test_sqlalchemy_repositories.py  test_sqlalchemy_repositories_simple.py  test_units.py  test_use_cases_comprehensive.py  test_users_api_comprehensive.py  test_users_api_simplified.py  test_users_routes_direct.py  test_value_objects_comprehensive.py  test_working.py
tests/integration/api/: test_users_api_comprehensive.py
tests/integration/repositories/: test_repositories_comprehensive.py  test_tortoise_repositories.py
tests/unit/domain/: test_entities_comprehensive.py  test_value_objects.py  test_value_objects_comprehensive.py
